<resources>
    <string name="action_settings">Settings</string>
    <string name="action_accounts">Manage accounts</string>
    <string name="action_account">Manage account</string>
    <string name="action_archive_chat">Archive chat</string>
    <string name="action_contact_details">Contact details</string>
    <string name="action_muc_details">Group chat details</string>
    <string name="channel_details">Channel details</string>
    <string name="action_add_account">Add account</string>
    <string name="action_edit_contact">Edit name</string>
    <string name="action_delete_contact">Delete from roster</string>
    <string name="action_block_contact">Block contact</string>
    <string name="action_unblock_contact">Unblock contact</string>
    <string name="action_block_domain">Block domain</string>
    <string name="action_unblock_domain">Unblock domain</string>
    <string name="action_block_participant">Block participant</string>
    <string name="action_unblock_participant">Unblock participant</string>
    <string name="title_activity_manage_accounts">Manage Accounts</string>
    <string name="pref_account_and_profile">Account and profile</string>
    <string name="pref_account_and_profile_summary">Avatar, display name, connection diagnostics and encryption devices</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_share_with">Share with…</string>
    <string name="title_activity_choose_contact">Choose Contact</string>
    <string name="title_activity_choose_contacts">Choose Contacts</string>
    <string name="title_activity_share_via_account">Share via account</string>
    <string name="title_activity_block_list">Block list</string>
    <string name="title_activity_new_chat">New chat</string>
    <string name="just_now">just now</string>
    <string name="minute_ago">1 min ago</string>
    <string name="minutes_ago">%d mins ago</string>
    <plurals name="x_unread_conversations">
        <item quantity="one">%d unread chat</item>
        <item quantity="other">%d unread chats</item>

    </plurals>
    <plurals name="x_unread_messages">
        <item quantity="one">%d unread message</item>
        <item quantity="other">%d unread messages</item>
    </plurals>
    <string name="sending">sending…</string>
    <string name="message_decrypting">Decrypting message. Please wait…</string>
    <string name="pgp_message">OpenPGP encrypted message</string>
    <string name="nick_in_use">Nickname is already in use</string>
    <string name="invalid_muc_nick">Invalid nickname</string>
    <string name="admin">Admin</string>
    <string name="owner">Owner</string>
    <string name="moderator">Moderator</string>
    <string name="participant">Participant</string>
    <string name="visitor">Visitor</string>
    <string name="remove_contact_text">Would you like to remove %s from your contact list? The chat with this contact will not be removed.</string>
    <string name="block_contact_text">Would you like to block %s from sending you messages?</string>
    <string name="unblock_contact_text">Would you like to unblock %s and allow them to send you messages?</string>
    <string name="block_domain_text">Block all contacts from %s?</string>
    <string name="unblock_domain_text">Unblock all contacts from %s?</string>
    <string name="contact_blocked">Contact blocked</string>
    <string name="blocked">Blocked</string>
    <string name="remove_bookmark">Would you like to remove the bookmark for %s?</string>
    <string name="remove_bookmark_and_close">Would you like to remove the bookmark for %s and archive the chat?</string>
    <string name="register_account">Register new account on server</string>
    <string name="change_password_on_server">Change password on server</string>
    <string name="share_with">Share with…</string>
    <string name="invite_contact">Invite contact</string>
    <string name="start_group_chat">Start group chat</string>
    <string name="invite">Invite</string>
    <string name="contacts">Contacts</string>
    <string name="chats">Chats</string>
    <string name="groups">Groups</string>
    <string name="filter_all">All</string>
    <string name="filter_unread">Unread</string>
    <string name="filter_favorites">Favorites</string>
    <string name="home_navigation">Main navigation</string>
    <string name="calls">Calls</string>
    <string name="start_call">Start a call</string>
    <string name="choose_call_contact">Choose a contact to call</string>
    <string name="search_calls">Search calls</string>
    <string name="no_recent_calls_title">No recent calls</string>
    <string name="no_recent_calls_hint">Your audio and video call history will appear here.</string>
    <string name="no_filtered_conversations_title">No matching chats</string>
    <string name="no_filtered_conversations_hint">Choose another filter or start a new chat</string>
    <string name="contact">Contact</string>
    <string name="cancel">Cancel</string>
    <string name="set">Set</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="block">Block</string>
    <string name="unblock">Unblock</string>
    <string name="save">Save</string>
    <string name="ok">OK</string>
    <string name="crash_report_title">%1$s has crashed</string>
    <string name="crash_report_message">Using your XMPP account to send in stack traces helps the ongoing development of %1$s.</string>
    <string name="send_now">Send now</string>
    <string name="send_never">Never ask again</string>
    <string name="problem_connecting_to_account">Could not connect to account</string>
    <string name="problem_connecting_to_accounts">Could not connect to multiple accounts</string>
    <string name="touch_to_fix">Tap to manage your accounts</string>
    <string name="attach_file">Attach file</string>
    <string name="not_in_roster">Add this missing contact to your contact list?</string>
    <string name="add_contact">Add contact</string>
    <string name="send_failed">delivery failed</string>
    <string name="preparing_image">Getting ready to send image</string>
    <string name="preparing_images">Getting ready to send images</string>
    <string name="sharing_files_please_wait">Sharing files. Please wait…</string>
    <string name="action_clear_history">Clear history</string>
    <string name="clear_conversation_history">Clear chat history</string>
    <string name="clear_histor_msg">Do you want to delete all messages in this chat?\n\n<b>Warning:</b> This will not influence messages stored on other devices or servers.</string>
    <string name="delete_file_dialog">Delete file</string>
    <string name="delete_file_dialog_shared">This file has been shared with other chats.</string>
    <string name="delete_file_dialog_confirm">Are you sure you want to delete this file?</string>
    <string name="delete_file_dialog_copies">This will not delete copies of this file that are stored on other devices or servers.</string>
    <plurals name="delete_files_dialog">
        <item quantity="one">Delete file</item>
        <item quantity="other">Delete %d files</item>
    </plurals>
    <plurals name="delete_files_dialog_msg">
        <item quantity="one">Are you sure you want to delete this file?</item>
        <item quantity="other">Are you sure you want to delete these files?</item>
    </plurals>
    <string name="archive_this_chat">Delete chat afterwards</string>
    <string name="choose_presence">Choose device</string>
    <string name="send_unencrypted_message">Send clear text message</string>
    <string name="send_message">Send message</string>
    <string name="open_emoji_picker">Open emoji picker</string>
    <string name="take_photo">Take a photo</string>
    <string name="send_message_to_x">Send message to %s</string>
    <string name="send_encrypted_message">Send encrypted message</string>
    <string name="pref_show_dynamic_tags">Dynamic Tags</string>
    <string name="pref_show_dynamic_tags_summary">Display read-only tags underneath contacts</string>
    <string name="pref_input_options">Input</string>
    <string name="pref_enter_is_send">Enter is send</string>
    <string name="pref_enter_is_send_summary">Use Enter key to send message. You can always use Ctrl+Enter to send message, even if this option is disabled.</string>
    <string name="pref_display_enter_key">Show enter key</string>
    <string name="pref_display_enter_key_summary">Change the emoticons key to an enter key</string>
    <string name="pref_quick_action">Quick Action</string>
    <string name="choose_quick_action">Choose quick action</string>
    <string name="pref_use_colorful_bubbles">Colorful chat bubbles</string>
    <string name="pref_use_colorful_bubbles_summary">Distinct background colors for sent and received messages</string>
    <string name="pref_scroll_to_bottom">Scroll to bottom</string>
    <string name="pref_scroll_to_bottom_summary">Scroll down after sending a message</string>
    <string name="pref_dynamic_colors">Dynamic colors</string>
    <string name="pref_dynamic_colors_summary">System colors (Material You)</string>
    <string name="pref_start_search">Direct Search</string>
    <string name="pref_start_search_summary">At ‘New chat’ screen open keyboard and place cursor in search field</string>
    <string name="your_avatar">Your avatar</string>
    <string name="start_chat">Start chat</string>
    <string name="appearance">Appearance</string>
    <string name="pref_light_dark_mode">Light/dark mode</string>
    <string name="pref_allow_screenshots">Allow screenshots</string>
    <string name="pref_allow_screenshots_summary">Show app content in app switcher and allow screenshots to be taken</string>
    <string name="pref_category_operating_system">Operating System</string>
    <string name="pref_keyboard_options">Keyboard</string>
    <string name="pref_large_font">Large font</string>
    <string name="pref_large_font_summary">Increase font size in message bubbles</string>
    <string name="pref_chat_bubbles">Chat bubbles</string>
    <string name="pref_chat_bubbles_summary">Background color, Font size, Avatars</string>
    <string name="pref_align_start">Left-aligned messages</string>
    <string name="pref_align_start_summary">Display all messages, including sent ones, on the left side for a uniform chat layout.</string>
    <string name="pref_account_avatar">Accounts</string>
    <string name="pref_account_avatar_summary">Display account avatars on outgoing messages for easy identification and management.</string>
    <string name="pref_category_avatars">Avatars</string>
    <string name="pref_show_11_chats">1:1 chats</string>
    <string name="pref_show_11_chats_summary">Display avatars in 1:1 chats. (Avatars in group chats will always been shown.)</string>
    <string name="empty_conversations_title">Your conversations start here</string>
    <string name="empty_conversations_list_hint">Once you start a new conversation, you’ll see it listed here</string>
    <string name="search_in_chats">Search in chats</string>
    <string name="pref_color_palette">Color palette</string>
    <string name="pref_color_palette_summary">Choose the Maer Chat accent colors</string>
    <string name="pref_message_font">Message font</string>
    <string name="pref_message_font_summary">Choose the typeface used in conversations</string>
    <string name="pref_chat_background">Conversation background</string>
    <string name="pref_chat_background_summary">Choose a discreet built-in background</string>
    <string name="pref_avatar_display">Avatar frequency</string>
    <string name="camera_unavailable_title">Camera unavailable</string>
    <string name="camera_unavailable_message">MAER Chat could not start the camera. Close any other app using it, then try again.</string>
    <string name="retry_camera">Try again</string>
</resources>