<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/appearance">
        <ListPreference
            android:defaultValue="@string/default_color_palette"
            android:entries="@array/maer_color_palette_entries"
            android:entryValues="@array/maer_color_palette_values"
            android:icon="@drawable/ic_palette_24dp"
            android:key="color_palette"
            android:summary="@string/pref_color_palette_summary"
            android:title="@string/pref_color_palette"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreferenceCompat
            android:defaultValue="@bool/dynamic_colors"
            android:icon="@drawable/ic_palette_24dp"
            android:key="dynamic_colors"
            android:summary="@string/pref_dynamic_colors_summary"
            android:title="@string/pref_dynamic_colors" />
        <ListPreference
            android:defaultValue="@string/theme"
            android:entries="@array/themes"
            android:entryValues="@array/themes_values"
            android:icon="@drawable/ic_dark_mode_24dp"
            android:key="theme"
            android:title="@string/pref_light_dark_mode"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            android:defaultValue="@string/default_message_font"
            android:entries="@array/maer_message_font_entries"
            android:entryValues="@array/maer_message_font_values"
            android:icon="@drawable/ic_format_size_24dp"
            android:key="message_font"
            android:summary="@string/pref_message_font_summary"
            android:title="@string/pref_message_font"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            android:defaultValue="@string/default_chat_background"
            android:entries="@array/maer_chat_background_entries"
            android:entryValues="@array/maer_chat_background_values"
            android:icon="@drawable/ic_image_24dp"
            android:key="chat_background"
            android:summary="@string/pref_chat_background_summary"
            android:title="@string/pref_chat_background"
            app:useSimpleSummaryProvider="true" />
        <Preference
            android:icon="@drawable/ic_forum_24dp"
            app:fragment="eu.siacs.conversations.ui.fragment.settings.InterfaceBubblesSettingsFragment"
            app:summary="@string/pref_chat_bubbles_summary"
            app:title="@string/pref_chat_bubbles" />
        <SwitchPreferenceCompat
            android:defaultValue="@bool/show_dynamic_tags"
            android:icon="@drawable/ic_label_24dp"
            android:key="show_dynamic_tags"
            android:summary="@string/pref_show_dynamic_tags_summary"
            android:title="@string/pref_show_dynamic_tags" />


    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_category_operating_system">
        <SwitchPreferenceCompat
            android:defaultValue="@bool/allow_screenshots"
            android:icon="@drawable/ic_screenshot_24dp"
            android:key="allow_screenshots"
            android:summary="@string/pref_allow_screenshots_summary"
            android:title="@string/pref_allow_screenshots" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_input_options">
        <ListPreference
            android:defaultValue="@string/quick_action"
            android:dialogTitle="@string/choose_quick_action"
            android:icon="@drawable/ic_send_time_extension_24dp"
            android:key="quick_action_button"
            android:title="@string/pref_quick_action" />
        <SwitchPreferenceCompat
            android:defaultValue="@bool/scroll_to_bottom"
            android:icon="@drawable/ic_vertical_align_bottom_24dp"
            android:key="scroll_to_bottom"
            android:summary="@string/pref_scroll_to_bottom_summary"
            android:title="@string/pref_scroll_to_bottom" />
        <SwitchPreferenceCompat
            android:defaultValue="@bool/start_searching"
            android:icon="@drawable/ic_search_24dp"
            android:key="start_searching"
            android:summary="@string/pref_start_search_summary"
            android:title="@string/pref_start_search" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_keyboard_options">
        <SwitchPreferenceCompat
            android:defaultValue="@bool/display_enter_key"
            android:icon="@drawable/ic_keyboard_return_24dp"
            android:key="display_enter_key"
            android:summary="@string/pref_display_enter_key_summary"
            android:title="@string/pref_display_enter_key" />
        <SwitchPreferenceCompat
            android:defaultValue="@bool/enter_is_send"
            android:icon="@drawable/ic_send_24dp"
            android:key="enter_is_send"
            android:summary="@string/pref_enter_is_send_summary"
            android:title="@string/pref_enter_is_send" />
    </PreferenceCategory>
</PreferenceScreen>
